--- a/index.html
+++ b/index.html
@@ -28,14 +28,23 @@
 <body>
     <div class="matrix-bg"></div>
     
-    <div class="theme-toggle-wrapper">
-        <button class="theme-toggle" aria-label="Toggle theme">
-            <div class="toggle-track">
-                <i class="ri-sun-fill light-icon"></i>
-                <i class="ri-moon-fill dark-icon"></i>
+    <div class="theme-switch">
+        <input type="checkbox" id="themeSwitch" class="theme-switch__checkbox">
+        <label for="themeSwitch" class="theme-switch__container">
+            <div class="theme-switch__circle-container">
+                <div class="theme-switch__sun-moon-container">
+                    <div class="theme-switch__moon">
+                        <div class="theme-switch__spot"></div>
+                        <div class="theme-switch__spot"></div>
+                        <div class="theme-switch__spot"></div>
+                    </div>
+                </div>
             </div>
-            <div class="toggle-thumb"></div>
-        </button>
+            <div class="theme-switch__clouds"></div>
+            <svg class="theme-switch__stars-container" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 144 43">
+                <path fill="currentColor" fill-rule="evenodd" d="m57.2 0 .2.3c0-.2.1-.3.2-.3h-.4Zm-1.8 1.3a.4.4 0 0 0-.5-.3c0 .2 0 .5.3.5h.5l-.3-.2ZM2.3 1.6a.7.7 0 0 0-.8-.5c0 .3 0 .7.5.7l.7-.1-.4-.1Zm16.3 1.2H18l-.3-.3c-.1.2-.2.3-.3.3h1.2Zm-8.4 1.8c.3 0 .6-.2.7-.5l-.7-.4c-.3 0-.6.2-.7.5l.7.4Zm127.4 1.3h.6l-.4-.4-.5.4h.3zm-109.6.7h1.3l-.4-.4-.5.4h-.4zm85.3 1.9c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-89.3 0h.4l-.3-.2-.3.2h.2zm42.1.3h.4l-.3-.2-.3.2h.2zm-31 1h.4l-.3-.3-.3.3h.2zm91 0c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zM10.7 11h.4l-.3-.2-.3.2h.2zm114 0h.4l-.3-.2-.3.2h.2zM90 11.3c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-72.8 1h.4l-.3-.3-.3.3h.2zm57.3 0h.4l-.3-.3-.3.3h.2zM55 13.9h.4l-.3-.3-.3.3h.2zm35.5 0h.4l-.3-.3-.3.3h.2zM33 14.2c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm54.6 1h.4l-.3-.3-.3.3h.2zm-69.2.3h.4l-.3-.2-.3.2h.2zm74.3 1.6c.3 0 .6-.2.7-.5l-.7-.4c-.3 0-.6.2-.7.5l.7.4zM95 17.4h.4l-.3-.2-.3.2h.2zm-67.7.3h.4l-.3-.2-.3.2h.2zm53.4 0c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-29.8 1.3h.4l-.3-.3-.3.3h.2zm35.2 0h.4l-.3-.3-.3.3h.2zm-4.7.3h.4l-.3-.2-.3.2h.2zm-59.2.7h.4l-.3-.3-.3.3h.2zm77.9.6h.4l-.3-.2-.3.2h.2zm-50.6.7h.4l-.3-.3-.3.3h.2zm-11.4 1.3h.4l-.3-.2-.3.2h.2zm39.8 0h.4l-.3-.2-.3.2h.2zm-85.7.3h.4l-.3-.2-.3.2h.2zm-6.5.7h.4l-.3-.3-.3.3h.2zm59.5 0h.4l-.3-.3-.3.3h.2zm-48.1.6h.4l-.3-.2-.3.2h.2zm89.9 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-20.3.6h.4l-.3-.2-.3.2h.2zm12.7 0h.4l-.3-.2-.3.2h.2zm76.5.7h.4l-.3-.3-.3.3h.2zm-89.2.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm86.7 0h.4l-.3-.3-.3.3h.2zm-54.3.6h.4l-.3-.2-.3.2h.2zm-14 1h.4l-.3-.3-.3.3h.2zm35.2 0h.4l-.3-.3-.3.3h.2zm-62.1.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm95.7 0h.4l-.3-.3-.3.3h.2zm-61.4.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm40.6 0h.4l-.3-.3-.3.3h.2zm-20.3.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.6h.4l-.3-.2-.3.2h.2zm40.6 0h.4l-.3-.2-.3.2h.2zm-20.3.7h.4l-.3-.3-.3.3h.2zm44.1 0h.4l-.3-.3-.3.3h.2zm-59.8.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm40.6 0h.4l-.3-.3-.3.3h.2zm23.8 0h.4l-.3-.3-.3.3h.2zm-44.1.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.6h.4l-.3-.2-.3.2h.2zm40.6 0h.4l-.3-.2-.3.2h.2zm23.8 0h.4l-.3-.2-.3.2h.2zm-44.1.7h.4l-.3-.3-.3.3h.2zm44.1 0h.4l-.3-.3-.3.3h.2z" clip-rule="evenodd"/>
+            </svg>
+        </label>
     </div>
 
     <nav class="right-nav">
