--- a/index.html
+++ b/index.html
@@ -67,11 +67,14 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#skills">Skills</a></li>
+            <li><a href="#professional-skills">Professional Skills</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#education">Education</a></li>
             <li><a href="#certifications">Certifications</a></li>
             <li><a href="#languages">Languages</a></li>
             <li><a href="#projects">Projects</a></li>
+            <li><a href="#ongoing-projects">Ongoing</a></li>
+            <li><a href="#volunteer">Volunteer</a></li>
             <li><a href="#contact">Contact</a></li>
                 </ul>
             </nav>
@@ -132,6 +135,16 @@
             </div>
         </section>
 
+        <section id="professional-skills" class="section">
+            <div class="container">
+                <div class="section-heading" data-aos="fade-up">
+                    <h2>Professional Skills</h2>
+                    <p>Leadership, collaboration, and delivery skills that support high-performing teams.</p>
+                </div>
+                <div id="professional-skills-content" class="skills-grid"></div>
+            </div>
+        </section>
+
         <section id="experience" class="section">
             <div class="container">
                 <div class="section-heading" data-aos="fade-up">
@@ -180,6 +193,26 @@
                 </div>
                 <div class="project-filters" id="project-filters" data-aos="fade-up"></div>
                 <div id="projects-content" class="projects-grid"></div>
+            </div>
+        </section>
+
+        <section id="ongoing-projects" class="section">
+            <div class="container">
+                <div class="section-heading" data-aos="fade-up">
+                    <h2>Ongoing Projects</h2>
+                    <p>In-progress initiatives exploring automation, AI, and mobile experiences.</p>
+                </div>
+                <div id="ongoing-projects-content" class="projects-grid"></div>
+            </div>
+        </section>
+
+        <section id="volunteer" class="section">
+            <div class="container">
+                <div class="section-heading" data-aos="fade-up">
+                    <h2>Volunteer Experience</h2>
+                    <p>Community-driven contributions and social impact initiatives.</p>
+                </div>
+                <div id="volunteer-content" class="experience-timeline"></div>
             </div>
         </section>
 
