--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/styles.css">
+    <script src="https://cdn.jsdelivr.net/npm/three@0.162.0/build/three.min.js" defer></script>
     <script src="js/data.js" defer></script>
     <script src="js/main.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js" defer></script>
@@ -31,80 +32,40 @@
     </script>
 </head>
 <body>
-    <div class="matrix-bg"></div>
     <div class="scroll-progress" aria-hidden="true"></div>
-    
-    <div class="theme-switch">
-        <input type="checkbox" id="themeSwitch" class="theme-switch__checkbox">
-        <label for="themeSwitch" class="theme-switch__container">
-            <div class="theme-switch__circle-container">
-                <div class="theme-switch__sun-moon-container">
-                    <div class="theme-switch__moon">
-                        <div class="theme-switch__spot"></div>
-                        <div class="theme-switch__spot"></div>
-                        <div class="theme-switch__spot"></div>
-                    </div>
-                </div>
-            </div>
-            <div class="theme-switch__clouds"></div>
-            <svg class="theme-switch__stars-container" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 144 43">
-                <path fill="currentColor" fill-rule="evenodd" d="m57.2 0 .2.3c0-.2.1-.3.2-.3h-.4Zm-1.8 1.3a.4.4 0 0 0-.5-.3c0 .2 0 .5.3.5h.5l-.3-.2ZM2.3 1.6a.7.7 0 0 0-.8-.5c0 .3 0 .7.5.7l.7-.1-.4-.1Zm16.3 1.2H18l-.3-.3c-.1.2-.2.3-.3.3h1.2Zm-8.4 1.8c.3 0 .6-.2.7-.5l-.7-.4c-.3 0-.6.2-.7.5l.7.4Zm127.4 1.3h.6l-.4-.4-.5.4h.3zm-109.6.7h1.3l-.4-.4-.5.4h-.4zm85.3 1.9c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-89.3 0h.4l-.3-.2-.3.2h.2zm42.1.3h.4l-.3-.2-.3.2h.2zm-31 1h.4l-.3-.3-.3.3h.2zm91 0c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zM10.7 11h.4l-.3-.2-.3.2h.2zm114 0h.4l-.3-.2-.3.2h.2zM90 11.3c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-72.8 1h.4l-.3-.3-.3.3h.2zm57.3 0h.4l-.3-.3-.3.3h.2zM55 13.9h.4l-.3-.3-.3.3h.2zm35.5 0h.4l-.3-.3-.3.3h.2zM33 14.2c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm54.6 1h.4l-.3-.3-.3.3h.2zm-69.2.3h.4l-.3-.2-.3.2h.2zm74.3 1.6c.3 0 .6-.2.7-.5l-.7-.4c-.3 0-.6.2-.7.5l.7.4zM95 17.4h.4l-.3-.2-.3.2h.2zm-67.7.3h.4l-.3-.2-.3.2h.2zm53.4 0c.3 0 .5-.1.6-.4l-.6-.3c-.3 0-.5.1-.6.4l.6.3zm-29.8 1.3h.4l-.3-.3-.3.3h.2zm35.2 0h.4l-.3-.3-.3.3h.2zm-4.7.3h.4l-.3-.2-.3.2h.2zm-59.2.7h.4l-.3-.3-.3.3h.2zm77.9.6h.4l-.3-.2-.3.2h.2zm-50.6.7h.4l-.3-.3-.3.3h.2zm-11.4 1.3h.4l-.3-.2-.3.2h.2zm39.8 0h.4l-.3-.2-.3.2h.2zm-85.7.3h.4l-.3-.2-.3.2h.2zm-6.5.7h.4l-.3-.3-.3.3h.2zm59.5 0h.4l-.3-.3-.3.3h.2zm-48.1.6h.4l-.3-.2-.3.2h.2zm89.9 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-20.3.6h.4l-.3-.2-.3.2h.2zm12.7 0h.4l-.3-.2-.3.2h.2zm76.5.7h.4l-.3-.3-.3.3h.2zm-89.2.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm86.7 0h.4l-.3-.3-.3.3h.2zm-54.3.6h.4l-.3-.2-.3.2h.2zm-14 1h.4l-.3-.3-.3.3h.2zm35.2 0h.4l-.3-.3-.3.3h.2zm-62.1.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm95.7 0h.4l-.3-.3-.3.3h.2zm-61.4.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm40.6 0h.4l-.3-.3-.3.3h.2zm-20.3.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.6h.4l-.3-.2-.3.2h.2zm40.6 0h.4l-.3-.2-.3.2h.2zm-20.3.7h.4l-.3-.3-.3.3h.2zm44.1 0h.4l-.3-.3-.3.3h.2zm-59.8.6h.4l-.3-.2-.3.2h.2zm-5.7.7h.4l-.3-.3-.3.3h.2zm40.6 0h.4l-.3-.3-.3.3h.2zm23.8 0h.4l-.3-.3-.3.3h.2zm-44.1.6h.4l-.3-.2-.3.2h.2zm44.1 0h.4l-.3-.2-.3.2h.2zm-59.8.7h.4l-.3-.3-.3.3h.2zm-5.7.6h.4l-.3-.2-.3.2h.2zm40.6 0h.4l-.3-.2-.3.2h.2zm23.8 0h.4l-.3-.2-.3.2h.2zm-44.1.7h.4l-.3-.3-.3.3h.2zm44.1 0h.4l-.3-.3-.3.3h.2z" clip-rule="evenodd"/>
-            </svg>
-        </label>
-    </div>
 
-    <header class="topbar">
-        <div class="container topbar-content">
-            <div class="brand">
-                <span class="brand-mark">AT</span>
-                <div class="brand-text">
-                    <span class="brand-name">Ali Tümer</span>
-                    <span class="brand-role">Full Stack Developer</span>
-                </div>
-            </div>
-            <nav class="right-nav">
-                <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#professional-skills">Professional Skills</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#certifications">Certifications</a></li>
-            <li><a href="#languages">Languages</a></li>
-            <li><a href="#projects">Projects</a></li>
-            <li><a href="#ongoing-projects">Ongoing</a></li>
-            <li><a href="#volunteer">Volunteer</a></li>
-            <li><a href="#contact">Contact</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
+    <aside class="sidebar glass">
+        <div class="sidebar-brand">AT</div>
+        <nav class="sidebar-nav">
+            <a class="sidebar-link" href="#home">
+                <i class="ri-home-4-line"></i>
+                <span>Home</span>
+            </a>
+            <a class="sidebar-link" href="#skills">
+                <i class="ri-stack-line"></i>
+                <span>Stack</span>
+            </a>
+            <a class="sidebar-link" href="#projects">
+                <i class="ri-layout-grid-line"></i>
+                <span>Projects</span>
+            </a>
+        </nav>
+    </aside>
 
     <main class="main-content">
         <section id="home" class="section hero-section">
+            <canvas id="hero-canvas" aria-hidden="true"></canvas>
             <div class="container hero">
                 <div class="hero-content" data-aos="fade-right">
                     <p class="eyebrow">Software Developer • Modern UI • Scalable Systems</p>
-                    <h1 id="name"></h1>
-                    <h2 id="title"></h2>
+                    <h1 id="name" class="hero-name glitch-text"></h1>
+                    <h2 id="title" class="hero-title"></h2>
                     <p id="headline" class="hero-summary"></p>
                     <div class="hero-actions">
-                        <a class="btn primary" href="#projects">View Projects</a>
-                        <a class="btn ghost" href="#contact">Hire Me</a>
+                        <a class="btn primary magnetic" href="#projects">View Projects</a>
+                        <a class="btn ghost magnetic" href="#contact">Hire Me</a>
                     </div>
                     <div class="hero-stats" id="stats"></div>
-                </div>
-                <div class="hero-card" data-aos="fade-left">
-                    <div class="profile-container">
-                        <div class="profile-image-wrapper">
-                            <div class="profile-image" id="profile-image"></div>
-                        </div>
-                    </div>
-                    <div class="hero-card-body">
-                        <div class="hero-contact" id="hero-contact"></div>
-                        <div class="hero-tags" id="hero-tags"></div>
-                    </div>
                 </div>
             </div>
         </section>
